packages/next-swc/crates/core/tests/errors/server-actions/client-graph/1/output.js
/* __next_internal_client_entry_do_not_use__ default auto */ /* __next_internal_action_entry_do_not_use__ $$ACTION_0 */ import __create_action_proxy__ from "private-next-rsc-action-proxy";
export default function App() {
    async function fn(...args) {
        return $$ACTION_0.apply(null, (fn.$$bound || []).concat(args));
    }
    __create_action_proxy__("6d53ce510b2e36499b8f56038817b9bad86cabb4", null, fn, $$ACTION_0);
    return <div>App</div>;
}
export async function $$ACTION_0() {}
